+ Added extra margin to the right of the last blog post tag * Stopped tags from hiding on mobile

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -31,8 +31,12 @@ span.tagList {
     font-style: normal;
   }
 
-  span.tagLabel:not(:last-child) {
+  span.tagLabel {
     margin-right: 2px;
+  }
+
+  span.tagLabel:last-child {
+    margin-right: 4px;
   }
 
   span.programming {
@@ -108,12 +112,5 @@ div#subscriptionButtons {
 
   > a:not(:last-child) {
     margin-right: 10px;
-  }
-}
-
-/* Mobile */
-@media only screen and (max-width: 480pt) {
-  a.postSummary > span {
-    display: none;
   }
 }
